# meem

./: .gitignore  AGENTS.md  README.md  install-linux.sh  package-lock.json  package.json
apps/memos/: APP.md
apps/notes/: APP.md
apps/todos/: APP.md
browser-use/: .gitignore  README.md  package-lock.json  package.json
browser-use/extension/: README.md  background.js  manifest.json  popup.html  popup.js
browser-use/mcp/: server.js  tools.js
client/: config.example.js  index.js  package-lock.json  package.json
client/src/: files.js  system.js
client/system/: client.js  utils.js
client/tauri/: Cargo.toml  build.rs  tauri.conf.json
client/tauri/capabilities/: default.json
client/tauri/icons/: icon.icns  tray.rgba
client/tauri/permissions/autogenerated/: local_bridge_get.toml
client/tauri/src/: lib.rs  main.rs
dev/doc/: 2026-05-21-meem-extension-decision.md
dev/migration/: migrate-mindbase.mjs  migrate-woodchange.mjs
extension/: .gitignore  AGENTS.md  README.md  config.example.js  index.html  manifest.example.json  package-lock.json  package.json  popup.css  popup.html  popup.js  tsconfig.json  vite.config.ts
extension/public/: manifest.json
extension/src/: App.tsx  background.js  (+6 more)
gui/: AGENTS.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
scripts/: dev.mjs  fix-node-pty.mjs  start.mjs
server/: config.example.js  db.js  index.js  package-lock.json  package.json
worker/: AGENTS.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.example.jsonc  wrangler.jsonc
(+497 files in other folders)
