[package]
name = "meem-client"
version = "0.1.0"
description = "Meem desktop client"
authors = []
edition = "2021"

[lib]
name = "meem_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
